--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32136,6 +32136,25 @@ select {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.scrollbar-w-2::-webkit-scrollbar {
+  height: .5rem!important;
+  width: .5rem!important;
+}
+
+.scrollbar-thumb-rounded::-webkit-scrollbar-thumb {
+  border-radius: .25rem !important;
+}
+
+.scrollbar-thumb-gray::-webkit-scrollbar-thumb {
+  --tw-bg-opacity: 1!important;
+  background-color: rgba(209, 213, 219, var(--tw-bg-opacity))!important;
+}
+
+.scrollbar-track-gray-lighter::-webkit-scrollbar-track {
+  --tw-bg-opacity: 1!important;
+  background-color: rgba(249, 250, 251, var(--tw-bg-opacity))!important;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
@@ -188570,4 +188589,3 @@ select {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
-
